# cmake-qt5

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
